--- a/index.html
+++ b/index.html
@@ -88,22 +88,22 @@
 </h2>
 <ul>
     <li>
-        <img src="../images/Homework1/team-card1.jpg" alt= teamcard1 width="270" height="368"> 
+        <img src="images/Homework1/team-card1.jpg" alt= teamcard1 width="270" height="368"> 
         <p>John Doe</p>
         <p>Product Designer</p>
     </li>
     <li>
-        <img src="../images/Homework1/team-card2.jpg" alt= teamcard2 width="270" height="368"> 
+        <img src="images/Homework1/team-card2.jpg" alt= teamcard2 width="270" height="368"> 
         <p>John Doe</p>
         <p>Frontend Developer</p>
     </li>
     <li>
-        <img src="../images/Homework1/team-card3.jpg" alt= teamcard3 width="270" height="368"> 
+        <img src="images/Homework1/team-card3.jpg" alt= teamcard3 width="270" height="368"> 
         <p>John Doe</p>
         <p>Marketing</p>
     </li>
     <li>
-        <img src="../images/Homework1/team-card4.jpg" alt= teamcard4 width="270" height="368">
+        <img src="images/Homework1/team-card4.jpg" alt= teamcard4 width="270" height="368">
         <p>John Doe</p>
         <p>UI Designer </p>
     </li>
