--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 </h2>
 
 <ul>
-    <li><img src="../images/Homework2/box 1.jpg" alt= box1 width="370" height="294"></li>
-    <li><img src="../images/Homework2/box 2.jpg" alt= box2 width="370" height="294"></li>
-    <li><img src="../images/Homework2/box 3.jpg" alt= box3 width="370" height="294"></li>
+    <li><img src="images/Homework2/box 1.jpg" alt= box1 width="370" height="294"></li>
+    <li><img src="images/Homework2/box 2.jpg" alt= box2 width="370" height="294"></li>
+    <li><img src="images/Homework2/box 3.jpg" alt= box3 width="370" height="294"></li>
 </ul>
 </section>
 <section>
