--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 </h2>
 
 <ul>
-    <li><img src="images/Homework2/box 1.jpg" alt= box1 width="370" height="294"></li>
-    <li><img src="images/Homework2/box 2.jpg" alt= box2 width="370" height="294"></li>
-    <li><img src="images/Homework2/box 3.jpg" alt= box3 width="370" height="294"></li>
+    <li><img src="images/box 1.jpg" alt= box1 width="370" height="294"></li>
+    <li><img src="images/box 2.jpg" alt= box2 width="370" height="294"></li>
+    <li><img src="images/box 3.jpg" alt= box3 width="370" height="294"></li>
 </ul>
 </section>
 <section>
@@ -88,22 +88,22 @@
 </h2>
 <ul>
     <li>
-        <img src="images/Homework1/team-card1.jpg" alt= teamcard1 width="270" height="368"> 
+        <img src="images/team-card1.jpg" alt= teamcard1 width="270" height="368"> 
         <p>John Doe</p>
         <p>Product Designer</p>
     </li>
     <li>
-        <img src="images/Homework1/team-card2.jpg" alt= teamcard2 width="270" height="368"> 
+        <img src="images/team-card2.jpg" alt= teamcard2 width="270" height="368"> 
         <p>John Doe</p>
         <p>Frontend Developer</p>
     </li>
     <li>
-        <img src="images/Homework1/team-card3.jpg" alt= teamcard3 width="270" height="368"> 
+        <img src="images/team-card3.jpg" alt= teamcard3 width="270" height="368"> 
         <p>John Doe</p>
         <p>Marketing</p>
     </li>
     <li>
-        <img src="images/Homework1/team-card4.jpg" alt= teamcard4 width="270" height="368">
+        <img src="images/team-card4.jpg" alt= teamcard4 width="270" height="368">
         <p>John Doe</p>
         <p>UI Designer </p>
     </li>
